--- a/index.html
+++ b/index.html
@@ -1,1 +1,109 @@
+<!DOCTYPE html>
+<html lang="en">
+  <body>
+    <link rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+    <style>
+      * {
+        box-sizing: border-box;
+      }
+
+      body {
+        margin: 0;
+        font-family: Arial, Helvetica, sans-serif;
+      }
+
+      .topnav {
+        overflow: hidden;
+        background-color: white;
+      }
+
+      .topnav a {
+        float: left;
+        display: block;
+        color: black;
+        text-align: center;
+        padding: 14px 16px;
+        text-decoration: none;
+        font-size: 17px;
+      }
+
+      .topnav a:hover {
+        background-color: black;
+        color: white;
+      }
+
+      .topnav a.active {
+        background-color: white;
+        color: rgb(10,0,0);
+      }
+
+      .topnav .search-container {
+        float: right;
+      }
+
+      .topnav input[type="text"] {
+        padding: 6px;
+        margin-top: 8px;
+        font-size: 17px;
+        border: none;
+      }
+
+      .topnav .search-container button {
+        float: right;
+        padding: 6px 10px;
+        margin-top: 8px;
+        margin-right: 16px;
+        background: #ddd;
+        font-size: 17px;
+        border: none;
+        cursor: pointer;
+      }
+
+      .topnav .search-container button:hover {
+        background: #ccc;
+      }
+
+      @media screen and (max-width: 600px) {
+        .topnav .search-container {
+          float: none;
+        }
+        .topnav a,
+        .topnav input[type="text"],
+        .topnav .search-container button {
+          float: none;
+          display: block;
+          text-align: left;
+          width: 100%;
+          margin: 0;
+          padding: 14px;
+        }
+        .topnav input[type="text"] {
+          border: 1px solid #ccc;
+        }
+      }
+    </style>
+    <div class="topnav">
+        <a href="/">Home</a>
+        <a href="/about.html">About</a>
+        <a href="/whitepaper.html">Whitepaper</a>
+      </div>
+    <center>
+      <img
+        src="https://cdn.glitch.global/3b83f9f0-b978-41dc-bed2-917bfcb996df/smellycoinlogo.png?v=1643233011768"
+        width="400"
+        height="400"
+      />
+    </center>
+    
+    <div style="text-align: center">
+      <p>
+        <font face="courier" size="-1" color="#000000"
+          >Welcome to future of blockchain inclusivity</font
+        >
+      </p>
+    </div>
+  </body>
+</html>
 
